--- a/limit-service2-dev.properties
+++ b/limit-service2-dev.properties
@@ -1,3 +1,3 @@
 #application specific values
-limits-service.minimum=123
-limits-service.maximum=123456
+limits-service.minimum=456456
+limits-service.maximum=456789456
